# Sunnypilot-Dashdown

./: .gitignore  .ignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.claude/plans/: Phase 0 — Environment Bootstrap & Reference Setup.md  b1-mock-comma-mcp.md  b2-android-shell.md  b2-background-sync.md  cap-warn-settings.md  comma4-sunnypilot-copyparty-dashcam-vectorized-dijkstra.md  e2e-and-sync-roadmap.md  hdplayer-1-diagnose-edge.md  hdplayer-2-live-playlist.md  hdplayer-3-frontier-fallback.md  hdplayer-4-lru-budget.md  hdplayer-hardening.md  imperative-roaming-valiant.md  inmemory-lazy-remux.md  m0-rust-core-scaffolding.md  m1-copyparty-client-model-db.md  m2-drive-grouping.md  m3-storage-mirror.md  m4-sync-download-engine.md  m5-partial-resume.md  m6-settings-retention-autodelete.md  m7-connectivity.md  m8-uniffi-surface.md  natural-tiling-player.md  phase-a-mock-control-plane.md  phase-b-native-shells.md  phase-b1-transport-identity.md  phase-c-foreground-refresh.md  phase-c-research.md  phase-d-research.md  phase-d-retention.md  phase-e-maestro.md  phase-e-research.md  player-scrubbar.md  route-player-sync-rebuild.md  route-player.md  seamless-playback.md  sunnypilot-dashdown-master-plan.md
.github/workflows/: android-ci.yml  rust-ci.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/androidTest/java/org/sunnypilot/dashdown/: AutoSyncWorkerLiveTest.kt  ConnectivityLiveTest.kt  DeviceCrudTest.kt  DeviceRemuxDecodeTest.kt  DotLiveRefreshTest.kt  DownloadServiceLiveTest.kt  DriveExportLiveTest.kt  DriveListLiveRefreshTest.kt  DrivesSilentRefreshTest.kt  DrivesSyncLiveTest.kt  MockControl.kt  MultiCamHevcPlaybackLiveTest.kt  ResumeAfterInterruptLiveTest.kt  RetentionLiveTest.kt  SyncSessionDriveAddTest.kt  SyncSessionScheduledFgsTest.kt  SyncSessionSegmentPickupTest.kt  SyncSessionWorkerLiveTest.kt  WiringTest.kt
android/app/src/debug/: AndroidManifest.xml
android/app/src/debug/java/org/sunnypilot/dashdown/spike/: MultiRenderersFactory.java  SpikeMultiCamActivity.kt  TileTrackSelector.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/sunnypilot/dashdown/: DashdownApp.kt  MainActivity.kt  ServiceLocator.kt
android/app/src/main/java/org/sunnypilot/dashdown/core/: LogcatLogSink.kt  ProgressBus.kt
android/app/src/main/java/org/sunnypilot/dashdown/data/: DashdownRepository.kt  UiModels.kt
android/app/src/main/java/org/sunnypilot/dashdown/service/: DownloadService.kt
android/app/src/main/java/org/sunnypilot/dashdown/ui/: AppNavHost.kt  Locator.kt
android/app/src/main/java/org/sunnypilot/dashdown/work/: AutoSyncWorker.kt  Maintenance.kt  SyncBackstopWorker.kt  SyncSessionWorker.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/org/sunnypilot/dashdown/work/: MaintenanceTest.kt
android/core/: build.gradle  consumer-rules.pro  proguard-rules.pro
android/core/src/androidTest/java/org/sunnypilot/dashdown/core/: CoreLoadTest.kt
android/gradle/: libs.versions.toml
android/maestro/: add_device.yaml  clear_devices.yaml  connectivity_refresh_mock.yaml  drive_download.yaml  drive_list_refresh_mock.yaml  empty_state.yaml  manual_download_close.yaml  play_drive.yaml  remove_device.yaml  star_drive.yaml
android/maestro/scripts/: add_drive.js  remove_drive.js  set_reachable.js
docs/: REFERENCES.md  TESTING.md
ios/: .gitignore  Package.swift  README.md  build-rust-ios.sh  xtool.yml
ios/Sources/Dashdown/: ContentView.swift  DashdownApp.swift
ios/Tests/DashdownTests/: CoreLoadTests.swift
rust/bindgen/: Cargo.toml
rust/bindgen/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: error.rs  identity.rs  lib.rs  tls.rs
rust/core/src/connectivity/: mod.rs
rust/core/src/copyparty_client/: auth.rs  download.rs  listing.rs  mod.rs  pinning.rs
rust/core/src/db/: migrations.rs  mod.rs  schema.sql  schema_cap_warn.sql  schema_drive.sql  schema_identity.sql  schema_job.sql
rust/core/src/drive_grouping/: local.rs  mod.rs  remote.rs
rust/core/src/ffi/: callbacks.rs  mod.rs
rust/core/src/logging/: mod.rs
rust/core/src/model/: file_kind.rs  ids.rs  mod.rs  time.rs
rust/core/src/settings/: mod.rs
rust/core/src/storage/: mod.rs  paths.rs  scan.rs
rust/core/src/sync_engine/: download_job.rs  mod.rs  resume.rs  retention.rs
rust/core/src/video/: mod.rs  remux.rs
rust/core/tests/: it_appcore.rs  it_connectivity.rs  it_db.rs  it_download.rs  it_drive_grouping.rs  it_identity.rs  it_listing.rs  it_listing_auth.rs  it_live_device.rs  it_mock_harness.rs  it_offline_grouping.rs  it_real_copyparty.rs  it_remux_local.rs  it_resume.rs  it_retention.rs  it_tls.rs
rust/mock-comma-mcp/: Cargo.toml  README.md
rust/mock-comma-mcp/src/: lib.rs  main.rs  server.rs
rust/mock-comma-mcp/tests/: it_mcp.rs
rust/mock-copyparty/: Cargo.toml
rust/mock-copyparty/src/: control.rs  fixtures.rs  lib.rs  main.rs  mutate.rs
rust/mock-copyparty/tests/: it_control.rs
tools/: dd-db.sh  dd-ui.sh  fetch-refs.sh  gen-bindings.sh  ios-build.Dockerfile  ios-build.sh  refgrep  run-android-e2e.sh  run-maestro-e2e.sh
(+34 files in other folders)
