[package]
name = "dashdown-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "dashdown_core"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
uniffi = { workspace = true, features = ["tokio"] }
tokio = { workspace = true, features = ["io-util", "fs", "net", "time", "rt-multi-thread"] }
r2d2_sqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
r2d2 = "0.8.10"
thiserror = "2.0.18"
tracing = "0.1.44"
percent-encoding = "2.3.2"
url = "2.5.8"
rusqlite = { version = "0.39", features = ["bundled"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "stream"] }
tokio-util = "0.7.18"
zip = "8.6.0"
tracing-subscriber = { version = "0.3.23", features = ["registry"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "tls12", "logging", "std"] }

[dev-dependencies]
mock-copyparty = { path = "../mock-copyparty" }
proptest = "1.11.0"
rcgen = "0.14.8"
tempfile = "3.27.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
wiremock = "0.6.5"
